brain-games in pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,4 @@ brain-calc = "brain_games.scripts.brain_calc:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
 brain-progression = "brain_games.scripts.brain_progression:main"
 brain-prime = "brain_games.scripts.brain_prime:main"
+brain-games = "brain_games.scripts.brain_games:main"
